--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -22,3 +22,27 @@
   font-size: 18px;
   color: #ccc;
 }
+
+.header-main {
+  background-image: url('../../assets/img/Header.jpg');
+  background-size: cover;
+  background-position: center;
+  color: white;
+  text-align: center;
+  padding: 5rem 1rem;
+}
+
+.header-content h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.header-content p {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
+}
+
+.header-content hr {
+    width: 50%;
+    margin: auto;
+}
